--- a/src/style/App.css
+++ b/src/style/App.css
@@ -44,6 +44,10 @@ h1{
   color: #20293A;
 }
 
+.h1-pokedex{
+  cursor: pointer;
+}
+
 header p{
   color: #64738E;
 }
@@ -96,7 +100,7 @@ border: 2px solid #E8EBF1;
   width:47%;
   border-radius: 20px;
   max-width: 180px;
-  background-image: url("./pokeball-img.png");
+  background-image: url("pokeball-img.png");
   background-repeat: no-repeat;
   background-position: top;
   background-blend-mode: screen;
