--- a/src/style/App.css
+++ b/src/style/App.css
@@ -335,6 +335,7 @@ footer p{
   color: #ffe;
   border-radius: 10px;
   animation: fadeIn 0.5s ease-in-out;
+  cursor: pointer;
 }
 
 .fixed-searchbar{
