--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,9 +1,4 @@
-/* 
-body{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
+
 
 .not-found{
   display: flex;
@@ -29,6 +24,21 @@ body{
   margin: 0 auto;
 }
 
+.block-title-logo{
+  display: flex;
+  margin-bottom: 10px;
+  cursor: pointer;
+  width: fit-content;
+}
+
+.logo-pokedex{
+  width: 30px;
+}
+
+.img-logo{
+  width: 100%;
+}
+
 header{
   padding-inline: 20px;
   margin-top: 50px;
@@ -39,14 +49,11 @@ header p{
   margin-bottom: 20px;
 }
 
-h1{
-  margin-bottom: 20px;
-  color: #20293A;
-}
-
 .h1-pokedex{
-  cursor: pointer;
   width: fit-content;
+  color: #20293A;
+  margin-right: 10px;
+  line-height: 1;
 }
 
 header p{
@@ -116,7 +123,22 @@ border: 2px solid #E8EBF1;
   align-items: baseline;
 }
 
-#img-meal{
+.block-type_overlay{
+  position: relative;
+  text-align: center;
+}
+
+.overlay-type{
+  background-color: #000;
+  border-radius: 50px;
+  height: 100%;
+  mix-blend-mode: darken;
+  opacity: .2;
+  position: absolute;
+  width: 100%;
+}
+
+#img-pokemon{
   width: 50%;
   padding-bottom: 5px;
   filter: drop-shadow(0px -1px 1px #000);
@@ -124,7 +146,7 @@ border: 2px solid #E8EBF1;
 
 #name-pokemon{
   margin-top: -4px;
-  color: white;
+  color: #F2F4F7;
   font-weight: 500;
 }
 
@@ -145,11 +167,6 @@ border: 2px solid #E8EBF1;
   border-radius: 50%;
 }
 
-/* #block-img{
-  display: flex;
-  flex-direction: column;
-} */
-
 .block-img{
   display: flex;
   align-items: center;
@@ -162,16 +179,21 @@ border: 2px solid #E8EBF1;
   gap: 5px;
   flex-direction: column;
   margin-left: 5px;
+  position: relative;
 }
 
 .type-name{
   font-size: 12px;
-  color: white;
+  color: #F2F4F7;
   font-weight: 500;
+  z-index: 2;
+  position: relative;
+  padding-inline: 4px;
+  
 }
 
 #pokemon-number{
-  color: white;
+  color: #F2F4F7;
 }
 
 footer{
@@ -190,7 +212,7 @@ footer p{
 .fa-xmark{
     height: 4px;
     position: absolute;
-    top: 20px;
+    top: 25px;
     border-radius: 10PX;
     right: 5%;
     transform: translateX(-50%);
@@ -222,7 +244,6 @@ footer p{
   height: 100vh;
   /* max-width: 1000px; */
   left: 0;
-
 }
 
 ::-webkit-scrollbar {
@@ -395,6 +416,7 @@ footer p{
 
 .pokemon-details_pointer{
   cursor: pointer;
+  padding-bottom: 10px;
 }
 
 .selected-pokemon_category{
@@ -487,7 +509,6 @@ footer p{
   background-color: #DFE4EC;
   margin-left: 105px;
   height: 20px;
-  max-width: 200%;
 
 }
 
@@ -501,6 +522,7 @@ footer p{
   background-color: #FFCC00;
   height: 100%;
   display: block;
+  max-width: 200%;
 }
 
 /* début style page Evolution */
@@ -549,6 +571,25 @@ footer p{
 .active{
   color: #272D41 !important;
 }
+
+.pokemon-details h4 {
+  position: relative;
+  cursor: pointer;
+}
+
+.pokemon-details h4.active::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20px;
+  height: 2px; 
+  background-color: #272D41;
+  border-radius: 10px 10px 1px 1px
+}
+
 
 .no-evolution{
   color: #272D41;
@@ -638,7 +679,6 @@ footer p{
 
 .no-pokemons{
   text-align: center;
-  color: #20293A;
   color: #20293A;
   font-weight: 500;
   font-size: 18px;
